created search bar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <title>
             Google
         </title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="image">
-        <img src="./googlelogo.png">
+        <div id="img">
+            <img height="92px" width="272px" src="./googlelogo.png">
+        </div>
+        <div id="input">
+            <form>
+                <input type="text" placeholder="Search Google or type a URL"
+                aria-hidden="true" autocomplete="off"type="url">
+            </form>
         </div>
     </body>
-</html>
+</html> 
