--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul id="nav_bar">
+                    <li class="nav-links" id="gmail"><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></li>
+                    <li class="nav-links"><a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl">Images</a></li>
+                    <li id="sign_in"><a href="https://myaccount.google.com/?utm_source=OGB&tab=rk&utm_medium=app">Sign In</a></li>
+                </ul>  
+            </nav>  
+        </header> 
         <div id="img">
             <img height="92px" width="272px" src="./googlelogo.png">
         </div>
